# rakshakai

./: README.md  app.py  docker-compose.yml  requirements.txt  setup.cfg  streamlit.toml
backend/: requirements.txt
backend/api/: main.py  routes.py  schemas.py
backend/workers/: ingest_reports.py
docs/: architecture.md  deployment.md  design_system.md
infra/k8s/: deployment.yaml  service.yaml
infra/nginx/: nginx.conf
src/assets/: illustrations
src/assets/styles/: styles.css
src/components/: cta_buttons.py  footer.py  header.py  hero.py  map_widget.py  report_form.py  sos_button.py  testimonial_carousel.py
src/models/: ml_model.py  preprocessing.py
src/pages/: about.py  community_reports.py  contact.py  emergency_help.py  features.py  home.py  live_tracker.py  safe_route_map.py  testimonials.py
src/services/: ai_guardian.py  firebase_service.py  maps_service.py  notifications.py  risk_scoring.py
src/utils/: constants.py  ui.py  validators.py
tests/integration/: test_api_flow.py
tests/unit/: test_pages.py  test_services.py
