[metadata]
name = rakshak.ai
version = 0.1.0
description = A modern, secure, and AI-driven website for women's safety and navigation.
author = Your Name
author_email = your.email@example.com
url = https://rakshak.ai
license = MIT

[options]
packages = find:
install_requires =
    streamlit
    pandas
    numpy
    requests
    firebase-admin
    tensorflow
    geopy
    folium

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    black
    flake8
    isort
    mypy

[tool:pytest]
testpaths = tests

[flake8]
max-line-length = 88
extend-ignore = E203, W503

[coverage:run]
branch = True
source = src

[coverage:report]
show_missing = True
skip_covered = True